tests/compile-fail/panic/double_panic.rs
// error-pattern: the evaluated program aborted

struct Foo;
impl Drop for Foo {
    fn drop(&mut self) {
        panic!("second");
    }
}
fn main() {
    let _foo = Foo;
    panic!("first"); 
}
